<resources>
    <string name="app_name">s152716 The ultimate galgeleg</string>
    <string name="hjaelpOverskrift">Hjælp</string>
    <string name="reglerOverskrift">Regler:</string>
    <string name="understregning">____________________________________________</string>
    <string name="hjealpTekst">Spillet vælger et tilfældigt ord, \n\nsom du skal gætte - bogstav for bogstav. \n\nVed forkert gæt mister du et liv, \n\nhvorefter mere og mere af den hængte mand dukker op.</string>
    <string name="hovedmenuOverskrift">Hovedmenu</string>
    <string name="understregningHovedmenu">____________________________________________</string>
    <string name="start_spilKnap">Start spil!</string>
    <string name="hjaelpKnap">Hjælp</string>
    <string name="galgespilOverskrift">Galgespil</string>
    <string name="understregningSpil">____________________________________________</string>
    <string name="qKnap">Q</string>
    <string name="aKnap">A</string>
    <string name="wKnap">W</string>
    <string name="knapØ">Ø</string>
    <string name="knapÅ">Å</string>
    <string name="knapÆ">Æ</string>
    <string name="knapP">P</string>
    <string name="knapF">F</string>
    <string name="knapX">X</string>
    <string name="knapT">T</string>
    <string name="knapC">C</string>
    <string name="knapN">N</string>
    <string name="knapM">M</string>
    <string name="knapR">R</string>
    <string name="knapG">G</string>
    <string name="knapY">Y</string>
    <string name="knapH">H</string>
    <string name="knapV">V</string>
    <string name="knapS">S</string>
    <string name="knapZ">Z</string>
    <string name="knapD">D</string>
    <string name="knapE">E</string>
    <string name="knapB">B</string>
    <string name="knapJ">J</string>
    <string name="knapU">U</string>
    <string name="knapI">I</string>
    <string name="knapO">O</string>
    <string name="knapL">L</string>
    <string name="knapK">K</string>
    <string name="NØGLE">nøgle</string>
    <string name="antalForsoeg" />
    <string name="antalForsoegVinderAkt" />
    <string name="taberTekst" />
    <string name="highscoreKnap">Highscore</string>
    <string name="_100">100</string>
    <string name="highscoreData">5 forsøg</string>
    <string name="spilIgen">Spil igen?</string>
    <string name="hovedmenuVinder">Hovedmenu</string>
    <string name="hovedmenuTaber">Hovedmenu</string>
</resources>
