<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Spil_akt">

    <TextView
        android:id="@+id/spilOverskrift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:text="@string/galgespilOverskrift"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="10dp"
        android:text="@string/understregningSpil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/billede"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/galge"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/knapQ"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="1dp"
        android:text="@string/qKnap"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapA"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="1dp"
        android:text="@string/aKnap"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapW"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/wKnap"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapE"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapS"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapS"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapE"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapE"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/knapE"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapR"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapD"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapD"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapR"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapZ"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:text="@string/knapZ"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapR"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapR"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/knapR"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapT"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapF"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapF"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapT"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapX"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:text="@string/knapX"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapT"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapT"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/knapT"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapY"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapC"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:text="@string/knapC"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapY"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapG"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapG"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapY"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapY"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/knapY"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapB"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapH"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapH"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapB"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapV"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:text="@string/knapV"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapB"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapB"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:text="@string/knapB"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapI"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapJ"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapJ"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapI"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapU"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/knapU"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapI"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapI"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/knapI"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapO"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapK"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapK"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapO"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapN"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:text="@string/knapN"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapO"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapO"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/knapO"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapP"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapL"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapL"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapP"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapM"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="156dp"
        android:text="@string/knapM"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapP"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapP"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/knapP"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapÅ"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapÆ"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapÆ"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/knapÅ"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapÅ"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="2dp"
        android:text="@string/knapÅ"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <Button
        android:id="@+id/knapØ"
        android:layout_width="37dp"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:text="@string/knapØ"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <EditText
        android:id="@+id/felt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billede" />

    <TextView
        android:id="@+id/antalForsoeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="307dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="104dp"
        android:text="@string/antalForsoeg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>